--- a/Transcendence/Frontend/src/LoginPage.css
+++ b/Transcendence/Frontend/src/LoginPage.css
@@ -16,8 +16,8 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: violet;
-    background: url('../Icons/Capture d’écran 2024-11-22 152222.png') no-repeat;
+    /* background-color: violet; */
+    /* background: url('../Icons/Capture d’écran 2024-11-22 152222.png') no-repeat; */
     background-size: cover;
     background-position: center 90px;
 }
@@ -179,6 +179,7 @@
     font-size: 2em;
     color: white;
     text-align: center;
+    user-select: none;
 }
 
 .input-box {
