--- a/Transcendence/Frontend/src/Menu.css
+++ b/Transcendence/Frontend/src/Menu.css
@@ -403,6 +403,69 @@ svg path {
     display: block;
 }
 
+.menuProfilePicture {
+    position: absolute;
+    top: 1%;
+    right: 11%;
+    display: flex;
+}
+
+.menuProfilePicture::after {
+    position: absolute;
+    content: '';
+    width: 100px;
+    height: 100px;
+    border: solid white 2px;
+    border-radius: 50%;
+    box-shadow: 0 0 5px white,
+                inset 0 0 5px black;
+}
+
+.menuProfilePicture img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.menuLanguage {
+    position: absolute;
+    top: 1%;
+    left: 11%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.languageButton {
+    display: none;
+}
+
+.languageButton.active {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+}
+
+.languageButton.active .langBtn {
+    height: fit-content;
+    text-size-adjust: 100%;
+    font-size: 15px;
+    font-weight: 600;
+    background: var(--back-color-1);
+    border: solid 1px white;
+    border-radius: 3px;
+    margin-top: 5px;
+    color: white;
+    padding: 2px 2px 2px 2px;
+    transition: .2s;
+}
+
+.languageButton.active .langBtn:hover {
+    background: var(--color-1);
+    border: solid orange 1px;
+    box-shadow: 0 0 3px var(--color-1);
+}
+
 /* .btn:hover span {
     opacity: 0;
 }
