--- a/Transcendence/Frontend/src/Profile.css
+++ b/Transcendence/Frontend/src/Profile.css
@@ -19,6 +19,11 @@
     min-height: 100vh;
     min-width: 100vw;
     background: var(--back-color);
+    transition: .5s;
+}
+
+.profileBody:has(.profile-container:hover) {
+    background: transparent;
 }
 
 .profileHeader {
@@ -31,6 +36,7 @@
     justify-content: flex-start;
     background: var(--back-color-1);
     color: white;
+    z-index: 999;
 }
 
 .profileLogo {
@@ -58,11 +64,11 @@
     font-weight: 700;
     letter-spacing: 1px;
     cursor: pointer;
-    transition: .5s;
+    transition: .2s;
 }
 
 .navProfile:hover, .navAccount:hover {
-    border: solid 1px orange;
+    border-right: solid 5px orange;
     box-shadow: 0 0 3px var(--color-1),
                 0 0 8px var(--color-1);
     transform: scaleX(1.1);
@@ -70,10 +76,16 @@
     letter-spacing: 2px;
 }
 
+.profileNav:has(.navProfile:hover) .navAccount,
+.profileNav:has(.navAccount:hover) .navProfile {
+    transition: none;
+    filter: brightness(.8);
+}
+
 .profile-container {
     width: clamp(300px, 70%, 500px);
     height: fit-content;
-    max-height: 800px;
+    max-height: 90vh;
     padding: 20px;
     text-align: center;
     background-color: var(--back-color-1);
@@ -82,7 +94,8 @@
     border-radius: 5px;
     box-shadow: 0 0 5px white,
                 0 0 10px white,
-                0 0 25px white,
+                0 0 20px white,
+                0 0 30px var(--back-color),
                 inset 0 0 5px black,
                 inset 0 0 10px black;
     transition: .2s;
